--- a/6_WebSite/Blogs.WebSite/src/styles/scss/main.scss
+++ b/6_WebSite/Blogs.WebSite/src/styles/scss/main.scss
@@ -40,7 +40,6 @@
   overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
-  border-bottom: 1px solid var(--color-border-light);
 
   &::-webkit-scrollbar {
     display: none;
@@ -238,6 +237,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-sm);
+
 }
 
 /* 加载状态 */
@@ -1573,3 +1573,21 @@
   background: #6d819f;
 }
 }
+
+/**首页文章列表样式*/
+.articles-list {
+  border-bottom: 2px solid var(--color-border-light) !important;
+  .article-card-header {
+    width:auto;
+    max-width: 150px;
+    float:right;
+  }
+  .article-title {
+    margin-bottom:2px;
+    font-size:18px;
+    color: #2c73d2;
+  }
+  .article-card{
+    border:none !important;
+  }
+} 
