--- a/6_WebSite/Blogs.WebSite/src/styles/global.css
+++ b/6_WebSite/Blogs.WebSite/src/styles/global.css
@@ -25,11 +25,11 @@
 
   /* 背景颜色 */
   --color-bg-default: #FFFFFF;        /* 全局背景 = 白 */
-  --color-bg-paper: #F5F7FA;          /* 卡片背景 = 极浅灰 */
-  --color-bg-grey: #E8ECF1;
+  --color-bg-paper: #FFFFFF;          /* 卡片背景 = 极浅灰 */
+  --color-bg-grey: #fdfffd;
 
   /* 状态颜色 */
-  --color-success: #4CAF50;
+  --color-success: #499d6b;
   --color-error: #F44336;
   --color-warning: #FFA726;
   --color-info: #2196F3;
@@ -105,7 +105,7 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   font-size: 16px;
   line-height: 1.6;
   color: var(--color-text-primary);
