--- a/6_WebSite/Blogs.WebSite/src/styles/scss/main.scss
+++ b/6_WebSite/Blogs.WebSite/src/styles/scss/main.scss
@@ -1585,7 +1585,7 @@
   .article-title {
     margin-bottom:2px;
     font-size:18px;
-    color: #2c73d2;
+    color: #000;
   }
   .article-card{
     border:none !important;
